# benchmark

./: CMakeLists.txt  README
include/: comp3d.hpp  cuda_2d.h  cuda_3d.h  cudachk.h  eigen_matmul.hpp
src/: bench_cuda.cu  bench_cuda1d.cu  bench_cuda2d.cu  bench_cuda3d.cpp  bench_cuda3d.cu  bench_cudamatmul.cu  bench_eigen.cpp  comp3d.cu
